# scopus_fractions

./: .gitignore  README.md  download.py  export_excel.py  generate.py  pyproject.toml  secret.json
lib/: blockcsv.py  log.py  model.py  secret.py  stepper.py  tabular.py  web.py
